# spectrelauncher

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Jenkinsfile  vcpkg.json
assets/: AppImageDeploy.desktop  resources.qrc
src/impl/: homewindow.cpp  main.cpp  playtab.cpp  serverstab.cpp  settingstab.cpp  tabspanel.cpp
src/model/: LauncherTab.h  homewindow.h  playtab.h  serverstab.h  settingstab.h  tabspanel.h
src/ui/: PlayTab.ui  ServersTab.ui  SettingsTab.ui  TabsPanel.ui
